--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - 27017:27017
     volumes:
       - ./data:/data/db
+      - ./dump:/dump
     restart: always
     networks:
       - mongodb_network
